masks are masking even better